2009-05-14  Steve Falkenburg  <sfalken@apple.com>

        Back out incorrect Windows build fix

        * JavaScriptCore.vcproj/JavaScriptCore.make:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:

2009-05-14  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix

        * JavaScriptCore.vcproj/JavaScriptCore.make:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:

2009-05-14  Adam Roben  <aroben@apple.com>

        Windows jsc build fix

        r43648 modified jsc.vcproj's post-build event not to try to copy files
        that aren't present. Then r43661 mistakenly un-did that modification.
        This patch restores the modification from r43648, but puts the code in
        jscCommon.vsprops (where it should have been added in r43648).

        * JavaScriptCore.vcproj/jsc/jsc.vcproj: Restored empty
        VCPostBuildEventTool tags.
        * JavaScriptCore.vcproj/jsc/jscCommon.vsprops: Modified the post-build
        event command line to match the one in jsc.vcproj from r43648.

2009-05-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25325

        Make sure pthread_self() is declared before it gets called in Collector.cpp

        * runtime/Collector.cpp: Include pthread.h in most Unix-like platforms
        (not just for OPENBSD)

2009-05-14  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Fix <https://bugs.webkit.org/show_bug.cgi?id=25785>.
        Bug 25785: Segfault in mark when using JSObjectMakeConstructor

        * API/JSObjectRef.cpp:
        (JSObjectMakeConstructor): OpaqueJSClass::prototype can return 0.  We need to use the default object prototype when it does.
        * API/tests/testapi.c:
        (main): Add a test case.
        * runtime/JSObject.h:
        (JSC::JSObject::putDirect): Add a clearer assertion for a null value.  The assertion on the next line does catch this,